--- a/docs/installation.asciidoc
+++ b/docs/installation.asciidoc
@@ -43,7 +43,7 @@ The master branch will always track Elasticsearch master, but it is not recommen
 }
 --------------------------
 
-* Install the client with composer.  The first command download the `composer.phar` PHP package, and the second command invokes the installation.  Composer will automatically download any required dependencies, store them in a /vendor/ directory and build an autoloader.:
+* Install the client with composer.  The first command downloads the `composer.phar` PHP package, and the second command invokes the installation.  Composer will automatically download any required dependencies, store them in a /vendor/ directory and build an autoloader.:
 +
 [source,shell]
 --------------------------
