Changed object initialisation
Namespace has to be included when creating the object.

--- a/docs/quickstart.asciidoc
+++ b/docs/quickstart.asciidoc
@@ -30,7 +30,7 @@ php composer.phar install --no-dev
 ----------------------------
 require 'vendor/autoload.php';
 
-$client = ClientBuilder::create()->build();
+$client = Elasticsearch\ClientBuilder::create()->build();
 ----------------------------
 
 
