--- a/docs/quickstart.asciidoc
+++ b/docs/quickstart.asciidoc
@@ -44,12 +44,12 @@ corresponding to the data in your document:
 
 [source,php]
 ----------------------------
-$params = [
+$params = array(
     'index' => 'my_index',
     'type' => 'my_type',
     'id' => 'my_id',
-    'body' => ['testField' => 'abc']
-];
+    'body' => array('testField' => 'abc')
+);
 
 $response = $client->index($params);
 print_r($response);
@@ -77,11 +77,11 @@ Let's get the document that we just indexed.  This will simply return the docume
 
 [source,php]
 ----------------------------
-$params = [
+$params = array(
     'index' => 'my_index',
     'type' => 'my_type',
     'id' => 'my_id'
-];
+);
 
 $response = $client->get($params);
 print_r($response);
@@ -103,7 +103,6 @@ Array
         (
             [testField] => abc
         )
-
 )
 ----------------------------
 
@@ -113,17 +112,17 @@ Searching is a hallmark of elasticsearch, so let's perform a search.  We are goi
 
 [source,php]
 ----------------------------
-$params = [
+$params = array(
     'index' => 'my_index',
     'type' => 'my_type',
-    'body' => [
-        'query' => [
-            'match' => [
+    'body' => array(
+        'query' => array(
+            'match' => array(
                 'testField' => 'abc'
-            ]
-        ]
-    ]
-];
+            )
+        )
+    )
+);
 
 $response = $client->search($params);
 print_r($response);
@@ -174,11 +173,11 @@ Alright, let's go ahead and delete the document that we added previously:
 
 [source,php]
 ----------------------------
-$params = [
+$params = array(
     'index' => 'my_index',
     'type' => 'my_type',
     'id' => 'my_id'
-];
+);
 
 $response = $client->delete($params);
 print_r($response);
@@ -206,9 +205,9 @@ Due to the dynamic nature of elasticsearch, the first document we added automati
 
 [source,php]
 ----------------------------
-$deleteParams = [
+$deleteParams = array(
     'index' => 'my_index'
-];
+);
 $response = $client->indices()->delete($deleteParams);
 print_r($response);
 ----------------------------
@@ -230,15 +229,15 @@ Now that we are starting fresh (no data or index), let's add a new index with so
 
 [source,php]
 ----------------------------
-$params = [
+$params = array(
     'index' => 'my_index',
-    'body' => [
-        'settings' => [
+    'body' => array(
+        'settings' => array(
             'number_of_shards' => 2,
             'number_of_replicas' => 0
-        ]
-    ]
-];
+        )
+    )
+);
 
 $response = $client->indices()->create($params);
 print_r($response);
