--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -109,8 +109,8 @@ try {
     $client->search($searchParams);
 } catch (Elasticsearch\Common\Exceptions\TransportException $e) {
     $previous = $e->getPrevious();
-    if ($previous instanceof 'Elasticsearch\Common\Exceptions\MaxRetriesException') {
-        echo "Max retries!"
+    if ($previous instanceof Elasticsearch\Common\Exceptions\MaxRetriesException) {
+        echo "Max retries!";
     }
 }
 ----------------------------
