same errors, additional occurrence

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -88,8 +88,8 @@ try {
     $client->search($searchParams);
 } catch (Elasticsearch\Common\Exceptions\Curl\CouldNotConnectToHost $e) {
     $previous = $e->getPrevious();
-    if ($previous instanceof 'Elasticsearch\Common\Exceptions\MaxRetriesException') {
-        echo "Max retries!"
+    if ($previous instanceof Elasticsearch\Common\Exceptions\MaxRetriesException) {
+        echo "Max retries!";
     }
 }
 ----------------------------
