--- a/docs/crud.asciidoc
+++ b/docs/crud.asciidoc
@@ -73,8 +73,10 @@ A simple example might look like this:
 ----
 for($i = 0; $i < 100; $i++) {
     $params['body'][] = [
-        'index' => 'my_index',
-                    'type' => 'my_type',
+        'index' => [
+            '_index' => 'my_index',
+            '_type' => 'my_type',
+	]
     ];
 
     $params['body'][] = [
