Add psr7 and httplug, remove all things about client (no longer needed)

--- a/docs/breaking-changes.asciidoc
+++ b/docs/breaking-changes.asciidoc
@@ -1,4 +1,9 @@
 
+== Breaking changes from 2.x
+
+- The client now requires PHP version 5.5 or higher
+-
+
 == Breaking changes from 1.x
 
 - The client now requires PHP version 5.4 or higher
