--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -74,47 +74,6 @@ alive nodes, and `setRetries(5)`, the client will attempt to execute the command
 result in a connection timeout (for example), the client will throw an `OperationTimeoutException`.  Depending on the
 Connection Pool being used, these nodes may also be marked dead.
 
-To help in identification, exceptions that are thrown due to max retries will wrap a `MaxRetriesException`.  For example,
-you can catch a specific curl exception then check if it wraps a MaxRetriesException using `getPrevious()`:
-
-[source,php]
-----
-$client = Elasticsearch\ClientBuilder::create()
-    ->setHosts(["localhost:1"])
-    ->setRetries(0)
-    ->build();
-
-try {
-    $client->search($searchParams);
-} catch (Elasticsearch\Common\Exceptions\Curl\CouldNotConnectToHost $e) {
-    $previous = $e->getPrevious();
-    if ($previous instanceof 'Elasticsearch\Common\Exceptions\MaxRetriesException') {
-        echo "Max retries!";
-    }
-}
-----
-
-Alternatively, all "hard" curl exceptions (`CouldNotConnectToHost`, `CouldNotResolveHostException`, `OperationTimeoutException`)
-extend the more general `TransportException`.  So you could instead catch the general `TransportException` and then
-check it's previous value:
-
-[source,php]
-----
-$client = Elasticsearch\ClientBuilder::create()
-    ->setHosts(["localhost:1"])
-    ->setRetries(0)
-    ->build();
-
-try {
-    $client->search($searchParams);
-} catch (Elasticsearch\Common\Exceptions\TransportException $e) {
-    $previous = $e->getPrevious();
-    if ($previous instanceof 'Elasticsearch\Common\Exceptions\MaxRetriesException') {
-        echo "Max retries!";
-    }
-}
-----
-
 
 [[enabling_logger]]
 === Enabling the Logger
@@ -129,8 +88,8 @@ You might have noticed that Monolog was suggested during installation.  To begin
 {
     "require": {
         ...
-        "elasticsearch/elasticsearch" : "~2.0",
-        "monolog/monolog": "~1.0"
+        "elasticsearch/elasticsearch" : "^2.0",
+        "monolog/monolog": "^1.0"
     }
 }
 ----------------------------
@@ -142,34 +101,7 @@ And then update your composer installation:
 php composer.phar update
 ----------------------------
 
-Once Monolog (or another logger) is installed, you need to create a log object and inject it into the client.  The
-`ClientBuilder` object has a helper static function that will generate a common Monolog-based logger for you.  All you need
-to do is provide the path to your desired logging location:
-
-[source,php]
-----
-$logger = ClientBuilder::defaultLogger('path/to/your.log');
-
-$client = ClientBuilder::create()       // Instantiate a new ClientBuilder
-            ->setLogger($logger)        // Set the logger with a default logger
-            ->build();                  // Build the client object
-----
-
-You can also specify the severity of log messages that you wish to log:
-
-[source,php]
-----
-// set severity with second parameter
-$logger = ClientBuilder::defaultLogger('/path/to/logs/', Logger::INFO);
-
-$client = ClientBuilder::create()       // Instantiate a new ClientBuilder
-            ->setLogger($logger)        // Set the logger with a default logger
-            ->build();                  // Build the client object
-----
-
-The `defaultLogger()` method is just a helper, you are not required to use it.  You can create your own logger and inject
-that instead:
-
+Once Monolog (or another logger) is installed, you need to create a log object and inject it into the client.
 
 [source,php]
 ----
@@ -185,69 +117,49 @@ $client = ClientBuilder::create()       // Instantiate a new ClientBuilder
 ----
 
 
-=== Configure the HTTP Handler
+=== Configure the HTTP Client
 
-Elasticsearch-PHP uses an interchangeable HTTP transport layer called https://github.com/guzzle/RingPHP/[RingPHP].  This
-allows the client to construct a generic HTTP request, then pass it to the transport layer to execute.  The actual execution
-details are hidden from the client and modular, so that you can choose from several HTTP handlers depending on your needs.
+Elasticsearch-PHP uses an interchangeable HTTP transport layer called http://docs.php-http.org/en/latest/httplug/introduction.html[HTTPlug].
+This allows the client to construct a PSR7 HTTP Request, then pass it to the transport layer to execute.
+The actual execution details are hidden from the client and modular, so that you can choose from several HTTP clients
+depending on your needs.
 
-The default handler that the client uses is a combination handler.  When executing in synchronous mode, the handler
-uses `CurlHandler`, which executes single curl calls.  These are very fast for single requests.  When asynchronous (future)
-mode is enabled, the handler switches to `CurlMultiHandler`, which uses the curl_multi interface.  This involves a bit
-more overhead, but allows batches of HTTP requests to be processed in parallel.
+By default it will try to find an `HttpAsyncClient` with helps of the http://docs.php-http.org/en/latest/discovery.html[discovery system]
 
-You can configure the HTTP handler with one of several helper functions, or provide your own custom handler:
+You can configure the HTTP Client in the builder:
 
 [source,php]
 ----
-$defaultHandler = ClientBuilder::defaultHandler();
-$singleHandler  = ClientBuilder::singleHandler();
-$multiHandler   = ClientBuilder::multiHandler();
-$customHandler  = new MyCustomHandler();
+use GuzzleHttp\Client as GuzzleClient;
+use Http\Adapter\Guzzle6\Client as GuzzleAdapter;
 
+$config = [
+    // Config params of Guzzle6
+];
+
+$httpAsyncClient = new GuzzleAdapter(new GuzzleClient($config));
 $client = ClientBuilder::create()
-            ->setHandler($defaultHandler)
+            ->setHttpAsyncClient($httpAsyncClient)
             ->build();
 ----
 
-For details on creating your own custom Ring handler, please see the http://guzzle.readthedocs.org/en/latest/handlers.html[RingPHP Documentation]
+For details on creating or using an HttpAsyncClient, please see http://docs.php-http.org/en/latest/clients.html[HTTPlug Documentation]
 
-The default handler is recommended in almost all cases.  This allows fast synchronous execution, while retaining flexibility
-to invoke parallel batches with async future mode.  You may consider using just the `singleHandler` if you know you will
-never need async capabilities, since it will save a small amount of overhead by reducing indirection.
+=== Setting the Client Pool
 
-
-=== Setting the Connection Pool
-
-The client maintains a pool of connections, with each connection representing a node in your cluster.  There are several
-connection pool implementations available, and each has slightly different behavior (pinging vs no pinging, etc).
-Connection pools are configured via the `setConnectionPool()` method:
+The connection pool manages the logic that decides which connection should be used for the next API request.
+There are several strategies that you can choose from. It can be changed via the `setClientPoolStrategy()` method:
 
 [source,php]
 ----
-$connectionPool = '\Elasticsearch\ConnectionPool\StaticNoPingConnectionPool';
+use Http\Client\Common\HttpClientPool\LeastUsedClientPool;
+
 $client = ClientBuilder::create()
-            ->setConnectionPool($connectionPool)
+            ->setClientPoolStrategy(LeastUsedClientPool::class)
             ->build();
 ----
 
-For more details, please see the dedicated page on link:_connection_pool.html[configuring connection pools].
-
-=== Setting the Connection Selector
-
-The connection pool manages the connections to your cluster, but the Selector is the logic that decides which connection
-should be used for the next API request.  There are several selectors that you can choose from.  Selectors can be changed
-via the `setSelector()` method:
-
-[source,php]
-----
-$selector = '\Elasticsearch\ConnectionPool\Selectors\StickyRoundRobinSelector';
-$client = ClientBuilder::create()
-            ->setSelector($selector)
-            ->build();
-----
-
-For more details, please see the dedicated page on link:_selectors.html[configuring selectors].
+For more details, please see the dedicated page on http://docs.php-http.org/en/latest/components/client-common.html#httpclientpool[HTTPlug].
 
 
 === Setting the Serializer
@@ -268,61 +180,6 @@ $client = ClientBuilder::create()
 ----
 
 For more details, please see the dedicated page on link:_serializers.html[configuring serializers].
-
-
-=== Setting a custom ConnectionFactory
-
-The ConnectionFactory instantiates new Connection objects when requested by the ConnectionPool.  A single Connection
-represents a single node.  Since the client hands actual networking work over to RingPHP, the Connection's main job is
-book-keeping:  Is this node alive?  Did it fail a ping request?  What is the host and port?
-
-There is little reason to provide your own ConnectionFactory, but if you need to do so, you need to supply an intact
-ConnectionFactory object to the `setConnectionFactory()` method.  The object should implement the `ConnectionFactoryInterface`
-interface.
-
-[source,php]
-----
-
-class MyConnectionFactory implements ConnectionFactoryInterface
-{
-
-    public function __construct($handler, array $connectionParams,
-                                SerializerInterface $serializer,
-                                LoggerInterface $logger,
-                                LoggerInterface $tracer)
-    {
-       // Code here
-    }
-
-
-    /**
-     * @param $hostDetails
-     *
-     * @return ConnectionInterface
-     */
-    public function create($hostDetails)
-    {
-        // Code here...must return a Connection object
-    }
-}
-
-
-$connectionFactory = new MyConnectionFactory(
-    $handler,
-    $connectionParams,
-    $serializer,
-    $logger,
-    $tracer
-);
-
-$client = ClientBuilder::create()
-            ->setConnectionFactory($connectionFactory);
-            ->build();
-----
-
-As you can see, if you decide to inject your own ConnectionFactory, you take over the responsibiltiy of wiring it correctly.
-The ConnectionFactory requires a working HTTP handler, serializer, logger and tracer.
-
 
 === Set the Endpoint closure
 
@@ -378,7 +235,7 @@ $params = [
         'localhost:9200'
     ],
     'retries' => 2,
-    'handler' => ClientBuilder::singleHandler()
+    'httpAsyncClient' => new GuzzleAdapter(new GuzzleClient([]))
 ];
 $client = ClientBuilder::fromConfig($params);
 ----
