--- a/docs/installation.asciidoc
+++ b/docs/installation.asciidoc
@@ -2,9 +2,10 @@
 
 Elasticsearch-php only has a three requirements that you need to worry about:
 
-* PHP 5.4.0 or higher
+* PHP 5.6.6 or higher
 * http://getcomposer.org[Composer]
 * http://php.net/manual/en/book.curl.php[ext-curl]: the Libcurl extension for PHP (see note below)
+* Native JSON Extensions (`ext-json`) 1.3.7 or higher
 
 The rest of the dependencies will automatically be downloaded and installed by Composer.  Composer is a package and dependency manager for PHP.  Installing elasticsearch-php with Composer is very easy
 
