--- a/docs/php-version-requirement.asciidoc
+++ b/docs/php-version-requirement.asciidoc
@@ -1,3 +1,4 @@
 == PHP Version Requirement
 
-Version 5.0 of Elasticsearch-PHP requires PHP version 5.6.6 or higher.
+Version 5.0 of Elasticsearch-PHP requires PHP version 5.6.6 or higher. In addition, it requires the native JSON
+extension to be version 1.3.7 or higher.
