--- a/docs/installation.asciidoc
+++ b/docs/installation.asciidoc
@@ -1,20 +1,20 @@
 == Installation
 
-Elasticsearch-php only has a four requirements that you need to worry about:
+Elasticsearch-php only has four requirements that you need to worry about:
 
 * PHP 5.6.6 or higher
 * http://getcomposer.org[Composer]
 * http://php.net/manual/en/book.curl.php[ext-curl]: the Libcurl extension for PHP (see note below)
 * Native JSON Extensions (`ext-json`) 1.3.7 or higher
 
-The rest of the dependencies will automatically be downloaded and installed by Composer.  Composer is a package and dependency manager for PHP.  Installing elasticsearch-php with Composer is very easy
+The rest of the dependencies will automatically be downloaded and installed by Composer.  Composer is a package and dependency manager for PHP.  Installing elasticsearch-php with Composer is very easy.
 
 [NOTE]
 .Libcurl can be replaced
 ====
 The default HTTP handlers that ship with Elasticsearch-php require the PHP libcurl extension, but it is not technically
 required for the client to operate.  If you have a host that does not have libcurl installed, you can use an
-alternate HTTP handler based on PHP streams.  Performance _will_ suffer, as the libcurl extension is much faster
+alternate HTTP handler based on PHP streams.  Performance _will_ suffer, as the libcurl extension is much faster.
 ====
 
 === Version Matrix
@@ -44,7 +44,7 @@ The master branch will always track Elasticsearch master, but it is not recommen
 }
 --------------------------
 
-* Install the client with composer.  The first command download the `composer.phar` PHP package, and the second command invokes the installation.  Composer will automatically download any required dependencies, store them in a /vendor/ directory and build an autoloader.:
+* Install the client with composer.  The first command downloads the `composer.phar` PHP package, and the second command invokes the installation.  Composer will automatically download any required dependencies, store them in a /vendor/ directory and build an autoloader.
 +
 [source,shell]
 --------------------------
@@ -65,7 +65,7 @@ $client = Elasticsearch\ClientBuilder::create()->build();
 +
 Client instantiation is performed with a static helper function `create()`.  This creates a ClientBuilder object,
 which helps you to set custom configurations.  When you are done configuring, you call the `build()` method to generate
-a `Client` object.  We'll discuss configuration more in the Configuration section
+a `Client` object.  We'll discuss configuration more in the Configuration section.
 
 
 === --no-dev flag
@@ -73,7 +73,7 @@ You'll notice that the installation command specified `--no-dev`.  This prevents
 from installing the various testing and development dependencies.  For average users, there
 is no need to install the test suite.  In particular, the development dependencies include
 a full copy of Elasticsearch so that tests can be run against the REST specifications.  This
-is a rather large download for non-developers, hence the --no-dev flag
+is a rather large download for non-developers, hence the `--no-dev` flag
 
 If you wish to contribute to development of this library, just omit the `--no-dev` flag to
 be able to run tests.
