--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -58,7 +58,7 @@ methods run into problems with certain edge-cases.  For example, `filter_var()` 
 Basic Auth's password contains special characters such as a pound sign (`#`) or question-marks (`?`).
 
 For this reason, the client supports an extended host syntax which provides greater control over host initialization.
-None of the components are validated, so edge-cases like underscores domain names will not cause problems.
+None of the components are validated, so edge-cases like underscores in domain names will not cause problems.
 
 The extended syntax is an array of parameters for each host:
 
@@ -227,7 +227,7 @@ $client = ClientBuilder::create()       // Instantiate a new ClientBuilder
 
 Elasticsearch-PHP uses an interchangeable HTTP transport layer called https://github.com/guzzle/RingPHP/[RingPHP].  This
 allows the client to construct a generic HTTP request, then pass it to the transport layer to execute.  The actual execution
-details are hidden from the client and modular, so that you can choose from several HTTP handlers depending on your needs.
+details are hidden from the client and it is modular, so that you can choose from several HTTP handlers depending on your needs.
 
 The default handler that the client uses is a combination handler.  When executing in synchronous mode, the handler
 uses `CurlHandler`, which executes single curl calls.  These are very fast for single requests.  When asynchronous (future)
