--- a/docs/search-operations.asciidoc
+++ b/docs/search-operations.asciidoc
@@ -236,7 +236,7 @@ $params = [
     "index" => "my_index",
     "body" => [
         "query" => [
-            "match_all" => [] // or use new \stdClass() 
+            "match_all" => new \stdClass() 
         ]
     ]
 ];
