[DOCS] use std class in example instead of empty array (#549)

--- a/docs/search-operations.asciidoc
+++ b/docs/search-operations.asciidoc
@@ -237,7 +237,7 @@ $params = [
     "index" => "my_index",
     "body" => [
         "query" => [
-            "match_all" => []
+            "match_all" => new \stdClass() 
         ]
     ]
 ];
