--- a/docs/community.asciidoc
+++ b/docs/community.asciidoc
@@ -76,3 +76,17 @@ https://github.com/cviebrock/laravel-elasticsearch[Link: cviebrock/Laravel-Elast
 __________________________
 An easy way to use the official Elastic Search client in your Laravel applications.
 __________________________
+
+
+=== Helper
+
+==== Index Helper
+
+https://github.com/Nexucis/es-php-index-helper[Link: nexucis/es-php-index-helper]
+
+[quote, Index Helper]
+_____________________
+This helper is a light library which wrap the official client elasticsearch-php. It will help you to manage your ES Indices with no downtime.
+This helper implements the philosophy described in the https://www.elastic.co/guide/en/elasticsearch/guide/master/index-aliases.html[official documentation]
+which can be summarized in a few words : *use alias instead of index directly*
+_____________________
