--- a/docs/index-operations.asciidoc
+++ b/docs/index-operations.asciidoc
@@ -41,7 +41,7 @@ $params = [
                 ],
                 'properties' => [
                     'first_name' => [
-                        'type' => 'string',
+                        'type' => 'keyword',
                         'analyzer' => 'standard'
                     ],
                     'age' => [
@@ -104,28 +104,28 @@ $params = [
             '_default_' => [    <4>
                 'properties' => [
                     'title' => [
-                        'type' => 'string',
+                        'type' => 'keyword',
                         'analyzer' => 'reuters',
                         'term_vector' => 'yes',
                         'copy_to' => 'combined'
                     ],
                     'body' => [
-                        'type' => 'string',
+                        'type' => 'keyword',
                         'analyzer' => 'reuters',
                         'term_vector' => 'yes',
                         'copy_to' => 'combined'
                     ],
                     'combined' => [
-                        'type' => 'string',
+                        'type' => 'keyword',
                         'analyzer' => 'reuters',
                         'term_vector' => 'yes'
                     ],
                     'topics' => [
-                        'type' => 'string',
+                        'type' => 'keyword',
                         'index' => 'not_analyzed'
                     ],
                     'places' => [
-                        'type' => 'string',
+                        'type' => 'keyword',
                         'index' => 'not_analyzed'
                     ]
                 ]
@@ -133,7 +133,7 @@ $params = [
             'my_type' => [  <5>
                 'properties' => [
                     'my_field' => [
-                        'type' => 'string'
+                        'type' => 'keyword'
                     ]
                 ]
             ]
@@ -214,7 +214,7 @@ $params = [
             ],
             'properties' => [
                 'first_name' => [
-                    'type' => 'string',
+                    'type' => 'keyword',
                     'analyzer' => 'standard'
                 ],
                 'age' => [
